--- a/ADSAP/templates/RH/Empleados/empleado_filter.html
+++ b/ADSAP/templates/RH/Empleados/empleado_filter.html
@@ -145,7 +145,7 @@
           empleado</a>
       </div>
       <div class="col">
-        <a href="{% url 'RH:eliminar_empleado' pk=usuario.id%}" class="btn BtnEliminar form-control">Eliminar
+        <a href="{% url 'RH:eliminar_empleado' pk=empleado.id%}" class="btn BtnEliminar form-control">Eliminar
           empleado</a>
       </div>
       <div class="col">
