--- a/ADSAP/templates/RH/Nominas/crea_semana.html
+++ b/ADSAP/templates/RH/Nominas/crea_semana.html
@@ -5,31 +5,19 @@
     <form method="post">
         {% csrf_token %}
         <table>
-            <thead>
+            {% for empleado, form in forms %}
                 <tr>
-                    <th>Empleado</th>
-                    <th>Salario Diario</th>
-                    <th>Horas Trabajadas</th>
-                    <th>Fecha Inicio</th>
-                    <th>Horas Extra</th>
-                    <th>Deducciones</th>
+                    <td>{{ empleado.nombre }}</td>
+                    <td>{{ form.salario_diario }}</td>
+                    <td>{{ form.horas_trabajadas }}</td>
+                    <td>{{ form.fecha_inicio }}</td>
+                    <td>{{ form.horas_extra }}</td>
+                    <td>{{ form.deducciones }}</td>
                 </tr>
-            </thead>
-            <tbody>
-                {% for empleado in empleados %}
-                    <tr>
-                        <td>{{ empleado.nombre }}</td>
-                        <td><input type="text" name="salario_diario_{{ empleado.id }}"></td>
-                        <td><input type="text" name="horas_trabajadas_{{ empleado.id }}"></td>
-                        <td><input type="date" name="fecha_inicio_{{ empleado.id }}"></td>
-                        <td><input type="text" name="horas_extra_{{ empleado.id }}"></td>
-                        <td><input type="text" name="deducciones_{{ empleado.id }}"></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+            {% endfor %}
         </table>
-        <button type="submit">Generar Nóminas</button>
-        <a href="{% url 'home:home' %}">Regresar</a>
+        <button type="submit">Enviar</button>
     </form>
+    
 </body>
 {% endblock content %}
