--- a/ADSAP/templates/noticia.html
+++ b/ADSAP/templates/noticia.html
@@ -49,6 +49,7 @@
   .accordion-body {
     font-size: 1.5em;
     text-align: justify;
+    display: inline-block;
   }
 
   .accordion-collapse {
@@ -119,9 +120,9 @@
               {{ noticia.contenido }}
             </div>
           </div>
-          {% endfor %}
         </div>
       </div>
+      {% endfor %}
     </div>
 </body>
 {% endblock content %}
