--- a/ADSAP/templates/RH/Noticias/noticia_editar.html
+++ b/ADSAP/templates/RH/Noticias/noticia_editar.html
@@ -11,8 +11,9 @@
     padding-top: 70px;
     padding-left: 25px;
     padding-right: 25px;
-    width: 900px;
-    margin-left: 400px;
+    height: 700px;
+    width: 1000px;
+    margin-left: 300px;
     display: block;
   }
 
